@@ -36,7 +36,7 @@ power <- function(lambda = 1)
         pmax(eta^(1/lambda), .Machine$double.eps)
     mu.eta <- function(eta)
         pmax((1/lambda) * eta^(1/lambda - 1), .Machine$double.eps)
-    valideta <- function(eta) all(eta>0)
+    valideta <- function(eta) all(is.finite(eta)) && all(eta>0)
     link <- paste0("mu^", round(lambda, 3))
     structure(list(linkfun = linkfun, linkinv = linkinv,
                    mu.eta = mu.eta, valideta = valideta, name = link),
@@ -106,19 +106,19 @@ make.link <- function (link)
                linkfun <- function(mu) sqrt(mu)
                linkinv <- function(eta) eta^2
                mu.eta <- function(eta) 2 * eta
-               valideta <- function(eta) all(eta>0)
+               valideta <- function(eta) all(is.finite(eta)) && all(eta>0)
            },
            "1/mu^2" = {
                linkfun <- function(mu) 1/mu^2
                linkinv <- function(eta) 1/sqrt(eta)
                mu.eta <- function(eta) -1/(2 * eta^1.5)
-               valideta <- function(eta) all(eta>0)
+               valideta <- function(eta) all(is.finite(eta)) && all(eta>0)
            },
            "inverse" = {
                linkfun <- function(mu) 1/mu
                linkinv <- function(eta) 1/eta
                mu.eta <- function(eta) -1/(eta^2)
-               valideta <- function(eta) all(eta != 0)
+               valideta <- function(eta) all(is.finite(eta)) && all(eta != 0)
            },
            ## else :
            stop(gettextf("%s link not recognised", sQuote(link)),
@@ -153,7 +153,7 @@ poisson <- function (link = "log")
         }
     }
     variance <- function(mu) mu
-    validmu <- function(mu) all(mu>0)
+    validmu <- function(mu) all(is.finite(mu)) && all(mu>0)
     dev.resids <- function(y, mu, wt)
     { ## faster than  2 * wt * (y * log(ifelse(y == 0, 1, y/mu)) - (y - mu))
 	r <- mu*wt
@@ -214,7 +214,7 @@ quasipoisson <- function (link = "log")
         }
     }
     variance <- function(mu) mu
-    validmu <- function(mu) all(mu>0)
+    validmu <- function(mu) all(is.finite(mu)) && all(mu>0)
     dev.resids <- function(y, mu, wt)
     { ## faster than  2 * wt * (y * log(ifelse(y == 0, 1, y/mu)) - (y - mu))
 	r <- mu*wt
@@ -312,7 +312,7 @@ binomial <- function (link = "logit")
         }
     }
     variance <- function(mu) mu * (1 - mu)
-    validmu <- function(mu) all(mu>0) && all(mu<1)
+    validmu <- function(mu) all(is.finite(mu)) && all(mu>0 &mu<1)
     dev.resids <- function(y, mu, wt) .Call(C_binomial_dev_resids, y, mu, wt)
     aic <- function(y, n, mu, wt, dev) {
         m <- if(any(n > 1)) n else wt
@@ -410,7 +410,7 @@ quasibinomial <- function (link = "logit")
         }
     }
     variance <- function(mu) mu * (1 - mu)
-    validmu <- function(mu) all(mu>0) && all(mu<1)
+    validmu <- function(mu) all(is.finite(mu)) && all(mu>0 &mu<1)
     dev.resids <- function(y, mu, wt) .Call(C_binomial_dev_resids, y, mu, wt)
     aic <- function(y, n, mu, wt, dev) NA
     initialize <- expression({
@@ -463,7 +463,7 @@ Gamma <- function (link = "inverse")
         }
     }
     variance <- function(mu) mu^2
-    validmu <- function(mu) all(mu>0)
+    validmu <- function(mu) all(is.finite(mu)) && all(mu>0)
     dev.resids <- function(y, mu, wt)
 	-2 * wt * (log(ifelse(y == 0, 1, y/mu)) - (y - mu)/mu)
     aic <- function(y, n, mu, wt, dev){
